# anabot

./: Cargo.toml  Dockerfile  README.md  main.js  package.json  sqlx-data.json
.github/: FUNDING.yml
.github/workflows/: docker-image.yml
migrations/: 20210827133808_timer.sql
migrations/2021-08-19-154901_create_timers/: up.sql
src/: db.rs  handler.rs  main.rs  models.rs  schema.rs
