[package]
name = "anabot"
version = "0.1.0"
authors = ["Yousof Mersal <yousofmersal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time" ] }
diesel = { version = "1.4.4", features = ["postgres"] }
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ["v4"]}
scheduler = {path = "../scheduler"}

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = false
diesel = { version = "1.4.4", features = ["postgres"] }
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]
