[package]
name = "anabot"
version = "0.1.0"
authors = ["Yousof Mersal <yousofmersal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time", "full"] }
sqlx = {version = "0.5", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "decimal"] }
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ["v4"]}
scheduler = {path = "../scheduler"}

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "utils"]
