[package]
name = "anabot"
version = "0.2.2-alpha"
authors = ["Yousof Mersal <yousofmersal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread", "time", "full"] }
sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono",
"decimal", "uuid"] }
chrono = "0.4.19"
uuid = {version = "0.8.2", features = ["v4"]}
scheduler = {path = "./lib/scheduler"}
cron = "0.9.0"
regex = "1.5.4"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api", "utils"]
